@@ -43,6 +43,7 @@
     - Bugfix: When reconfiguring the BibTeX key generator, changes are applied instantly without requiring a restart of JabRef
     - BREAKING: The BibTeX key generator settings from previous versions are lost
     - BREAKING: LabelPatterns [auth.etal], [authEtAl], [authors], [authorsN] to omit spaces and commas (and work as described at http://jabref.sourceforge.net/help/LabelPatterns.php)
+    - Feature: new LabelPattern [authFirstFull] returning the last name of the first author and also a "van" or "von" if it exists
 [dev_2.11]
     - Backports from 2.80: Fix bug #194: JabRef starts again on Win XP and Win Vista
     - Backports from 2.80: Fixes #103: JDialog for auto set links is openend and closed correctly
